# redundinator

./: .gitignore  Cargo.toml  README.md  compose.yml
data/config/: .gitignore
data/dockerConfigs/: rsyncd.conf
src/: action_queue.rs  app_logger.rs  backoff.rs  dispatch.rs  export.rs  lib.rs  mysql.rs  rsync.rs  settings.rs  shell.rs  tokens.rs
src/resources/: mod.rs  pages.rs
src/settings/: app_settings.rs  mod.rs  settings_resolver.rs
src/testing/: fixtures.rs
src/upload/: dropbox.rs  gdrive.rs  mod.rs
