[package]
name = "redundinator"
version = "0.0.0"
authors = ["Anthony Heathcoat <tony@aehdev.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-http = "2.2.0"
actix-files = "0.4.1"
async-trait = "0.1.42"
chrono = "0.4.19"
config = "0.10.1"
clap = {version = "2.33.3", features = ["yaml"]}
curl = "0.4.34"
enquote = "1.0.3"
futures = "0.3.8"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.11"
log4rs = "0.13.0"
nix = "0.19.1"
num = "0.3.1"
regex = "1.4.3"
rsyn = "0.0.1"
run_script = "0.6.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
yaml-rust = "0.3.5"
