[package]
name = "redundinator"
version = "0.0.0"
authors = ["Anthony Heathcoat <tony@aehdev.com>"]
edition = "2021"
license = "GPL-3.0+"
description = "Backup software"

[dependencies]
cmake = "0.1.51"
actix-web = "4.3.0"
actix-rt = "2.8.0"
actix-http = "3.3.0"
actix-files = "0.6.2"
async-trait = "0.1.83"
config = { version = "0.13.3", features = ["json", "json5"] }
google-apis-common = "7.0.0"
google-drive3 = "6.0.0"
clap = { version = "4.1.1", features = ["derive", "env", "unicode", "wrap_help"] }
curl = "0.4.47"
enquote = "1.1.0"
futures = "0.3.31"
glob = "0.3.1"
hyper = "1.5.0"
hyper-rustls = {version = "0.27.3", features=["http2"]}
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
mime = "0.3.17"
nix = "0.26.2"
num = "0.4.0"
regex = "1.7.1"
reqwest = { version = "0.12.9", features = ["json"] }
run_script = "0.10.1"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
md-5 = "0.10.5"
tokio = "1.41.1"
yup-oauth2 = "11.0.0"
dropbox-sdk = { version = "0.18.1", features = ["default_client", "dbx_files"] }
parallel_reader = "0.1.2"
chrono = "0.4.38"
sqlite = "0.36.0"
rand = "0.8.5"
tempfile = "3.10.1"
http-body-util = "0.1.2"
rustls = "0.23.16"